--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<h1> Por que Kevin Durant é o melhor do mundo  </h1>
+<!DOCTYPE html>
+
+<html lang="pt-br">
+
+<head> 
+
+<title> Por que Kevin Durant é o melhor d mundo </title> 
+<meta charset="UTF-8">
+<link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+
+<h1> Por que <bold> Kevin Durant </bold> é o melhor do mundo.  </h1>
 
 <p> Com grandes atuações nos playoffs pelo Brooklyn Nets, Kevin Durant provou o seu valor mais uma vez. Mesmo eliminado, debates surgiram novamente sobre quem é o melhor jogador da liga neste momento. </p>
 
@@ -15,3 +29,8 @@
 <p> “Vejo Kevin Durant, que tem mesma média de pontos que LeBron ao longo de sua carreira, 27 por jogo e ambos tem médias parecidas de rebotes. LeBron tem 73 por cento de arremessos de lances livres. Nos últimos três anos, ele arremessou menos de 70 por cento de lá. Kevin Durant tem mais de 85 por cento. É um atirador extraordinário. E quando eu analiso nessa perspectiva, eu apenas penso ofensivamente que há níveis para isso, e LeBron não está nesse nível. Não é nada contra LeBron, apenas mostra o nível de elegância que Kevin Durant tem.” </p>
 
 <p>Embora James seja um rotineiro arremessador de lance livre, suas taxas de conversão são um aspecto de seu jogo que poderia ser melhorado. Mas, considerando o quão dominante James é, usar lances livres - tão importantes quanto eles podem ser - para classificar um jogador sobre o outro é uma comparação bastante peculiar.</p>
+
+
+</body>
+
+</html>
