--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
 </head>
 
 <body>
+<ul>
+</ul>
+<header>
+<img src="kdbanner.jpg" >
 
-<h1> <text-align: center;> Por que <bold> Kevin Durant </bold> é o melhor do mundo. </text-align:> </h1>
 
-<p> Com grandes atuações nos playoffs pelo Brooklyn Nets, Kevin Durant provou o seu valor mais uma vez. Mesmo eliminado, debates surgiram novamente sobre quem é o melhor jogador da liga neste momento. </p>
+<ul>
 
-<p> Se alguns ainda duvidavam da qualidade e Durant após uma lesão no Aquiles, o jogador provou o contrário e que está realmente saudável. </p>
+
+
+<li> <h1> <text-align: center;> Por que <bold> Kevin Durant </bold> é o melhor do mundo. </text-align:> </h1>
+
+<p> Com grandes atuações nos playoffs pelo Brooklyn Nets, Kevin Durant provou o seu valor mais uma vez. Mesmo eliminado, debates surgiram novamente sobre quem é o melhor jogador da liga neste momento. </p> </header> </li>
+
+<main> <li> <p> Se alguns ainda duvidavam da qualidade e Durant após uma lesão no Aquiles, o jogador provou o contrário e que está realmente saudável. </p>
 
 <p> Durant teve médias de 34.3 pontos, 9.3 rebotes, 4.4 assistências, 1.5 roubos de bola e 1.6 tocos em 12 jogos dos playoffs, e muitos o consideram o melhor da liga atualmente. </p>
 
 <p> Sempre quando existe um debate sobre o melhor jogador da liga, o nome de LeBron James é mencionado, mesmo com o jogador chegando a marca de 18 temporadas na carreira. </p>
+
+<img src="kd20k.jpg">
+
 
 <h4> No programa "Get Up", da ESPN, a lenda do Lakers Magic Johnson e o analista Stephen A. Smith debateram quem está no topo neste momento. Johnson ficou do lado de James por conta de seu domínio geral do jogo, especialmente como ele eleva as habilidades de seus companheiros de equipe. </h4>
 
@@ -49,10 +61,19 @@
     eFG%: 54,6
 
     POR:25,3
+</li>
+</main> 
 
 </h4>
+
+</main>
+
+<footer>
+
+</footer>
+
 </body>
 
 </html>
 
-<img src="kd7.jpg">
+<img src="kd35.jpg">
