--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
 <ul>
 </ul>
 <header>
-<img src="kdbanner.jpg" >
 
+
+<nav>
 
 <ul>
+<li> <a href="index.html">Início</a> </li>
+<li> <a href="campeonatos.html"> Como foi Kevin Durant em GSW</a> </li>
+</ul>
+    
+
+</nav>
 
 
-
-<li> <h1> <text-align: center;> Por que <bold> Kevin Durant </bold> é o melhor do mundo. </text-align:> </h1>
+<h1> <text-align: center;> Por que <bold> Kevin Durant </bold> é o melhor do mundo. </text-align:> </h1>
 
 <p> Com grandes atuações nos playoffs pelo Brooklyn Nets, Kevin Durant provou o seu valor mais uma vez. Mesmo eliminado, debates surgiram novamente sobre quem é o melhor jogador da liga neste momento. </p> </header> </li>
 
-<main> <li> <p> Se alguns ainda duvidavam da qualidade e Durant após uma lesão no Aquiles, o jogador provou o contrário e que está realmente saudável. </p>
+<main>  <p> Se alguns ainda duvidavam da qualidade e Durant após uma lesão no Aquiles, o jogador provou o contrário e que está realmente saudável. </p>
 
 <p> Durant teve médias de 34.3 pontos, 9.3 rebotes, 4.4 assistências, 1.5 roubos de bola e 1.6 tocos em 12 jogos dos playoffs, e muitos o consideram o melhor da liga atualmente. </p>
 
