--- a/campeonatos.html
+++ b/campeonatos.html
@@ -9,6 +9,19 @@
 <link rel="stylesheet" href="style.css">
 
 </head>
+ 
+<header> 
+
+<nav>
+
+<ul>
+<li> <a href="index.html">Início</a> </li>
+<li> <a href="campeonatos.html">Como foi Kevin Durant em GSW</a> </li>
+</ul>
+        
+</nav>
+
+</header>
 
 <body>
 <h1> <text-align: center;> Como foi <bold> Kevin Durant </bold> no Golden State Warriors. </text-align:> </h1>
